--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,36 @@
+alembic==1.13.1
 annotated-types==0.6.0
 anyio==3.7.1
+async-generator==1.10
+async-timeout==4.0.3
+asyncpg==0.29.0
+attrs==23.1.0
+bcrypt==4.1.2
+cffi==1.16.0
 click==8.1.7
 colorama==0.4.6
+databases==0.8.0
 exceptiongroup==1.2.0
 fastapi==0.105.0
+fastapi-login==1.9.2
 greenlet==3.0.3
 h11==0.14.0
 idna==3.6
+Mako==1.3.0
+MarkupSafe==2.1.3
+outcome==1.3.0.post0
+passlib==1.7.4
+psycopg2-binary==2.9.9
+pycparser==2.21
 pydantic==2.5.2
 pydantic-settings==2.1.0
 pydantic_core==2.14.5
+PyJWT==2.8.0
 python-dotenv==1.0.0
 sniffio==1.3.0
-SQLAlchemy==2.0.23
+sortedcontainers==2.4.0
+SQLAlchemy==1.4.50
 starlette==0.27.0
+trio==0.21.0
 typing_extensions==4.9.0
 uvicorn==0.25.0
