--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,8 @@ bcrypt==4.1.2
 cffi==1.16.0
 click==8.1.7
 colorama==0.4.6
-databases==0.8.0
+dnspython==2.4.2
+email-validator==2.1.0.post1
 exceptiongroup==1.2.0
 fastapi==0.105.0
 fastapi-login==1.9.2
@@ -18,6 +19,7 @@ h11==0.14.0
 idna==3.6
 Mako==1.3.0
 MarkupSafe==2.1.3
+orjson==3.9.10
 outcome==1.3.0.post0
 passlib==1.7.4
 psycopg2-binary==2.9.9
@@ -27,9 +29,10 @@ pydantic-settings==2.1.0
 pydantic_core==2.14.5
 PyJWT==2.8.0
 python-dotenv==1.0.0
+python-multipart==0.0.6
 sniffio==1.3.0
 sortedcontainers==2.4.0
-SQLAlchemy==1.4.50
+SQLAlchemy==2.0.23
 starlette==0.27.0
 trio==0.21.0
 typing_extensions==4.9.0
