Updated conf files, docker-compose.yml

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ PROJECT_HOST='127.0.0.1'
 PROJECT_PORT=8000
 
 SECRET='your-secret-key'
+
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
