Added boto3 client to yandex.cloud  Object Storage

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ SECRET='your-secret-key'
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
+
+AWS_ACCESS_KEY_ID=YCAJEql6v7Jq7XnLC_TSPLxAL
+AWS_SECRET_ACCESS_KEY=YCO53sdnE98w8yBn0pOTRJW5LJbTh1Hb4kPJe94O
+BUCKET=yp38857.mybucket
