--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==23.2.1
 aioredis==2.0.1
 alembic==1.13.1
 annotated-types==0.6.0
@@ -7,6 +8,8 @@ async-timeout==4.0.3
 asyncpg==0.29.0
 attrs==23.1.0
 bcrypt==4.1.2
+boto3==1.34.8
+botocore==1.34.8
 cffi==1.16.0
 click==8.1.7
 colorama==0.4.6
@@ -18,23 +21,29 @@ fastapi-login==1.9.2
 greenlet==3.0.3
 h11==0.14.0
 idna==3.6
+jmespath==1.0.1
 Mako==1.3.0
 MarkupSafe==2.1.3
 orjson==3.9.10
 outcome==1.3.0.post0
 passlib==1.7.4
+pathlib==1.0.1
 psycopg2-binary==2.9.9
 pycparser==2.21
 pydantic==2.5.2
 pydantic-settings==2.1.0
 pydantic_core==2.14.5
 PyJWT==2.8.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
+s3transfer==0.10.0
+six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 SQLAlchemy==2.0.23
 starlette==0.27.0
 trio==0.21.0
 typing_extensions==4.9.0
+urllib3==2.0.7
 uvicorn==0.25.0
