--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_TITLE='FILE STORAGE'
 
-DATABASE_DSN=postgresql+asyncpg://postgres:postgres@localhost:5432/postgres
+# DATABASE_DSN=postgresql+asyncpg://postgres:postgres@localhost:5432/postgres
+DATABASE_DSN=postgresql+asyncpg://postgres:postgres@db:5432/postgres
 ECHO=True
 
 PROJECT_HOST='127.0.0.1'
