--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,27 @@
 APP_TITLE='FILE STORAGE'
-
-# DATABASE_DSN=postgresql+asyncpg://postgres:postgres@localhost:5432/postgres
-DATABASE_DSN=postgresql+asyncpg://postgres:postgres@db:5432/postgres
 ECHO=True
-
-PROJECT_HOST='127.0.0.1'
-PROJECT_PORT=8000
-
-SECRET='your-secret-key'
 
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
+# DATABASE_DSN=postgresql+asyncpg://postgres:postgres@localhost:5432/postgres
+DATABASE_DSN=postgresql+asyncpg://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB
+
+PROJECT_HOST='127.0.0.1'
+PROJECT_PORT=8000
+
+REDIS_HOST=cache
+REDIS_PORT=6379
+
+SECRET='your-secret-key'
+REGISTER_URL='/register'
+TOKEN_URL='/auth'
+
+S3_ENDPOINT_URL='https://storage.yandexcloud.net'
 AWS_ACCESS_KEY_ID='YCAJEql6v7Jq7XnLC_TSPLxAL'
 AWS_SECRET_ACCESS_KEY='YCO53sdnE98w8yBn0pOTRJW5LJbTh1Hb4kPJe94O'
 BUCKET='yp38857.mybucket'
