--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ dnspython==2.4.2
 email-validator==2.1.0.post1
 exceptiongroup==1.2.0
 fastapi==0.105.0
+fastapi-cache2==0.2.1
 fastapi-login==1.9.2
 greenlet==3.0.3
 h11==0.14.0
@@ -28,6 +29,7 @@ orjson==3.9.10
 outcome==1.3.0.post0
 passlib==1.7.4
 pathlib==1.0.1
+pendulum==3.0.0
 psycopg2-binary==2.9.9
 pycparser==2.21
 pydantic==2.5.2
@@ -37,13 +39,16 @@ PyJWT==2.8.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
+redis==5.0.1
 s3transfer==0.10.0
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 SQLAlchemy==2.0.23
 starlette==0.27.0
+time-machine==2.13.0
 trio==0.21.0
 typing_extensions==4.9.0
+tzdata==2023.4
 urllib3==2.0.7
 uvicorn==0.25.0
