Added tests and updated requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,10 @@ ignore =
     F811
 exclude =
     tests/,
-    */migrations/,
+    migrations/,
     venv/,
     env/
 per-file-ignores =
     */settings.py:E501
+    */logger.py:E501
 max-complexity = 10
