--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ attrs==23.1.0
 bcrypt==4.1.2
 boto3==1.34.8
 botocore==1.34.8
+certifi==2023.11.17
 cffi==1.16.0
 click==8.1.7
 colorama==0.4.6
@@ -21,21 +22,27 @@ fastapi-cache2==0.2.1
 fastapi-login==1.9.2
 greenlet==3.0.3
 h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
 idna==3.6
+iniconfig==2.0.0
 jmespath==1.0.1
 Mako==1.3.0
 MarkupSafe==2.1.3
 orjson==3.9.10
 outcome==1.3.0.post0
+packaging==23.2
 passlib==1.7.4
 pathlib==1.0.1
 pendulum==3.0.0
+pluggy==1.3.0
 psycopg2-binary==2.9.9
 pycparser==2.21
 pydantic==2.5.2
 pydantic-settings==2.1.0
 pydantic_core==2.14.5
 PyJWT==2.8.0
+pytest==7.4.4
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
@@ -47,6 +54,7 @@ sortedcontainers==2.4.0
 SQLAlchemy==2.0.23
 starlette==0.27.0
 time-machine==2.13.0
+tomli==2.0.1
 trio==0.21.0
 typing_extensions==4.9.0
 tzdata==2023.4
