--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiofiles==23.2.1
 aioredis==2.0.1
+aiosqlite==0.19.0
 alembic==1.13.1
 annotated-types==0.6.0
 anyio==3.7.1
@@ -43,6 +44,7 @@ pydantic-settings==2.1.0
 pydantic_core==2.14.5
 PyJWT==2.8.0
 pytest==7.4.4
+pytest-asyncio==0.23.3
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
