--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+aioboto3==12.1.0
+aiobotocore==2.8.0
 aiofiles==23.2.1
+aiohttp==3.9.1
+aioitertools==0.11.0
 aioredis==2.0.1
+aiosignal==1.3.1
 aiosqlite==0.19.0
 alembic==1.13.1
 annotated-types==0.6.0
@@ -9,8 +14,8 @@ async-timeout==4.0.3
 asyncpg==0.29.0
 attrs==23.1.0
 bcrypt==4.1.2
-boto3==1.34.8
-botocore==1.34.8
+boto3==1.33.1
+botocore==1.33.1
 certifi==2023.11.17
 cffi==1.16.0
 click==8.1.7
@@ -21,6 +26,7 @@ exceptiongroup==1.2.0
 fastapi==0.105.0
 fastapi-cache2==0.2.1
 fastapi-login==1.9.2
+frozenlist==1.4.1
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.2
@@ -30,6 +36,7 @@ iniconfig==2.0.0
 jmespath==1.0.1
 Mako==1.3.0
 MarkupSafe==2.1.3
+multidict==6.0.4
 orjson==3.9.10
 outcome==1.3.0.post0
 packaging==23.2
@@ -49,7 +56,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
 redis==5.0.1
-s3transfer==0.10.0
+s3transfer==0.8.0
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
@@ -62,3 +69,5 @@ typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.0.7
 uvicorn==0.25.0
+wrapt==1.16.0
+yarl==1.9.4
